--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Body styling */
 body {
   background: #713e94;
-  color: #fff;
+  color: #93e662;
   font-family: Helvetica, Arial;
   font-size: 27px;
   font-weight: 300;
