--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Body styling */
 body {
-  background: #713e94;
+  background: #76ec8a;
   color: #000000;
   font-family: Helvetica, Arial;
   font-size: 27px;
