--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ h1 {
   margin: 60px 0;
   background: #fff;
   border-radius: 6px;
-  color: #713e94;
+  color: #b7ffda;
   transition: 1s linear;
 }
 
