--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   background: #76ec8a;
   color: #000000;
-  font-family: Cursive, Arial;
+  font-family: Cursive;
   font-size: 27px;
   font-weight: 300;
   line-height: 1.65em;
