--- a/style.css
+++ b/style.css
@@ -40,17 +40,9 @@ h1 {
   margin: 0 auto 60px;
   padding: 1em 2em; 
   text-align: center; 
-  <style> 
-  a { 
-    color: black; 
-  } 
-   
-  a:hover { 
+  hover { 
     color: blue; 
   } 
-</style> 
- 
-<a href="#">This text will turn blue on mouseover.</a> 
 }
 
 .bucket {
