--- a/style.css
+++ b/style.css
@@ -42,17 +42,9 @@ h1 {
   text-align: center;
 }
 
-<style> 
-  button-submit { 
-    color: black; 
-  } 
-   
-  button-submit:hover { 
-    color: blue; 
-  } 
-</style> 
- 
-<button-submit href="#">This text will turn blue on mouseover.</button-submit>
+.button-submit:hover {
+  background-color: #000F;
+}
 
 .bucket {
   display: inline-block;
