--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ h1 {
   text-align: center;
 }
 
+h4 {
+  font-size: 100px;
+  color: #000000;
+  text-align: center;
+}
 
 /* Game Directions */
 .description {
