--- a/style.css
+++ b/style.css
@@ -20,9 +20,9 @@ h1 {
 }
 
 h4 {
-  font-size: 100px;
+  font-size: 50px;
   color: #000000;
-  text-align: center;
+  text-align: left;
 }
 
 /* Game Directions */
